logs/trainCNN.sh-gra855-15585649.out

Due to MODULEPATH changes, the following have been reloaded:
  1) openmpi/2.1.1

Python 3.5.4
  File "./trainCNN.py", line 99
    print('BN layer: trainable)
                              ^
SyntaxError: EOL while scanning string literal
